--- a/js/render.html
+++ b/js/render.html
@@ -3,6 +3,7 @@
         body {
             margin: 0;
         }
+
         canvas {
             width: 800px;
             height: 600px;
@@ -13,56 +14,13 @@
     <p id="debug"></p>
 </div>
 <script>
-    const connections = [
-        { a: 'a1', b: 'a3' },
-        { a: 'a5', b: 'a2' },
-        { a: 'a1', b: 'a2' },
-        { a: 'a2', b: 'a7' },
-        { a: 'a7', b: 'a6' },
-        { a: 'a4', b: 'a8' },
-        { a: 'a8', b: 'a3' },
-        { a: 'a9', b: 'a7' },
-        { a: 'a4', b: 'a10' },
-        { a: 'a10', b: 'a7' },
-        { a: 'a6', b: 'a11' },
-        { a: 'a11', b: 'a4' },
-        { a: 'a3', b: 'a12' },
-        { a: 'a12', b: 'a11' },
-        { a: 'a13', b: 'a9' },
-        { a: 'a14', b: 'a6' },
-        { a: 'a7', b: 'a11' },
-        { a: 'a6', b: 'a15' },
-        { a: 'a15', b: 'a8' },
-        { a: 'a8', b: 'a9' },
-        { a: 'a4', b: 'a16' },
-        { a: 'a3', b: 'a11' },
-        { a: 'a3', b: 'a17' },
-        { a: 'a17', b: 'a14' },
-        { a: 'a6', b: 'a17' },
-        { a: 'a1', b: 'a18' },
-        { a: 'a18', b: 'a5' },
-        { a: 'a4', b: 'a6' },
-        { a: 'a2', b: 'a19' },
-        { a: 'a19', b: 'a3' },
-        { a: 'a2', b: 'a4' },
-        { a: 'a3', b: 'a20' },
-        { a: 'a5', b: 'a12' },
-        { a: 'a20', b: 'a21' },
-        { a: 'a21', b: 'a10' },
-        { a: 'a12', b: 'a20' },
-        { a: 'a2', b: 'a22' },
-        { a: 'a22', b: 'a6' },
-        { a: 'a2', b: 'a20' },
-        { a: 'a16', b: 'a23' },
-        { a: 'a23', b: 'a13' },
-        { a: 'a4', b: 'a20' }
-    ];
+    const connections = [{"a":"a1","b":"a5"},{"a":"a1","b":"a6"},{"a":"a1","b":"a7"},{"a":"a2","b":"a5"},{"a":"a2","b":"a6"},{"a":"a2","b":"a7"},{"a":"a5","b":"a8"},{"a":"a5","b":"a9"},{"a":"a5","b":"a10"},{"a":"a5","b":"a11"},{"a":"a6","b":"a8"},{"a":"a6","b":"a9"},{"a":"a6","b":"a10"},{"a":"a6","b":"a11"},{"a":"a7","b":"a8"},{"a":"a7","b":"a9"},{"a":"a7","b":"a10"},{"a":"a7","b":"a11"},{"a":"a8","b":"a3"},{"a":"a8","b":"a4"},{"a":"a7","b":"a12"},{"a":"a7","b":"a13"},{"a":"a7","b":"a14"},{"a":"a8","b":"a12"},{"a":"a8","b":"a13"},{"a":"a8","b":"a14"},{"a":"a9","b":"a12"},{"a":"a9","b":"a13"},{"a":"a9","b":"a14"},{"a":"a10","b":"a12"},{"a":"a10","b":"a13"},{"a":"a10","b":"a14"},{"a":"a11","b":"a12"},{"a":"a11","b":"a13"},{"a":"a11","b":"a14"},{"a":"a12","b":"a3"},{"a":"a12","b":"a4"},{"a":"a13","b":"a3"},{"a":"a13","b":"a4"},{"a":"a14","b":"a3"},{"a":"a14","b":"a4"}];
 
-    const nodes = Array.from(new Array(23)).map((_, i) => ({
-        id: `a${i+1}`,
+    const nodes = Array.from(new Array(14)).map((_, i) => ({
+        id: `a${i + 1}`,
         x: Math.random() * 790,
         y: Math.random() * 590,
-        color: Math.floor(Math.random()*16777215).toString(16)
+        color: Math.floor(Math.random() * 16777215).toString(16)
     }));
 
     /** @type HTMLCanvasElement */
@@ -118,7 +76,7 @@
         return true;
     };
     canvas.addEventListener("mousedown", (ev) => {
-        const {clientX: x, clientY: y} = ev;
+        const { clientX: x, clientY: y } = ev;
         // grab node
         const node = nodes.find(n => contains(x, y, n.x, n.y, 20, 20));
         if (node) {
@@ -135,7 +93,7 @@
     const debug = document.getElementById("debug");
     canvas.addEventListener("mousemove", (ev) => {
         if (grabbed) {
-            const {clientX: x, clientY: y} = ev;
+            const { clientX: x, clientY: y } = ev;
             grabbed.x = x;
             grabbed.y = y;
         }
