--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     </head>
     <body>
         <canvas id="canvas"></canvas>
+        <script src="utils.js"></script>
         <script src="lib.js"></script>
         <script src="network.js"></script>
+        <script src="hopper.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
