--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <script src="lib.js"></script>
         <script src="network.js"></script>
         <script src="hopper.js"></script>
+        <script src="flower.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
