--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <script src="network.js"></script>
         <script src="hopper.js"></script>
         <script src="flower.js"></script>
+        <script src="fish.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
