beginning of swarm

--- a/swarm.html
+++ b/swarm.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Simple</title>
+        <title>Advanced</title>
         <style>
             body {
                 background: black;
@@ -24,9 +24,6 @@
         <script src="utils.js"></script>
         <script src="lib.js"></script>
         <script src="network.js"></script>
-        <script src="hopper.js"></script>
-        <script src="flower.js"></script>
-        <script src="fish.js"></script>
-        <script src="main.js"></script>
+        <script src="swarm.js"></script>
     </body>
 </html>
